--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,8 @@ body {
 
 nav {
   display: flex;
+  width: 100%;
+  justify-content: center;
 }
 
 header {
@@ -35,7 +37,7 @@ th {
 #btt {
   position: fixed;
   bottom: 10px;
-  right: 20%;
+  right: 10%;
 }
 
 main {
@@ -115,6 +117,20 @@ a:active {
   background-color: #eddea4;
 }
 
+.widebox {
+    width: 100%;
+    max-width: 420px;
+    background-color: #f9f7f3;
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem;
+    border-radius: 10px;
+    margin: 1px;
+    border-color: #4e5340;
+    border-style: solid;
+    
+}
+
 .content {
   padding: 2rem;
   flex-wrap: wrap;
@@ -190,6 +206,10 @@ article.rnd {
 time {
   font-style: italic;
   padding: 0 5px;
+}
+
+span {
+    padding: 5px;
 }
 
 .blogcnt {
